--- a/FitPush.html
+++ b/FitPush.html
@@ -15,14 +15,18 @@
 <style>
 :root{
   --bg:#05070c;
-  --glass:rgba(255,255,255,.06);
   --line:rgba(255,255,255,.14);
   --line2:rgba(255,255,255,.09);
   --text:#f5f7fb;
   --muted:#9aa6bb;
-  --ok:#86efac;
   --warn:#fdba74;
   --danger:#fca5a5;
+
+  /* user-tunable */
+  --clock-scale: 1.0;      /* 0.8 .. 1.25 */
+  --clock-bright: 1.0;     /* 0.5 .. 1.4 */
+  --clock-glow: 1.0;       /* 0.0 .. 1.6 */
+  --clock-vignette: .55;   /* 0 .. .75 */
 }
 
 *{box-sizing:border-box}
@@ -70,10 +74,10 @@ body::after{
 
 .clock-shell{
   position:relative;
-  width:min(92vw, 900px);
-  height:min(42vw, 340px);
-  max-height:340px;
-  border-radius:44px;
+  width:min(92vw, 980px);
+  height:min(42vw, 360px);
+  max-height:360px;
+  border-radius:46px;
   background:#03050a;
   border:1px solid rgba(255,255,255,.08);
   box-shadow:0 60px 140px rgba(0,0,0,.65);
@@ -81,6 +85,19 @@ body::after{
   outline:none;
   cursor:pointer;
   user-select:none;
+
+  transform: scale(var(--clock-scale));
+  filter: brightness(var(--clock-bright));
+}
+
+/* full-screen dial option */
+body.fullscreen-dial .clock-shell{
+  width: 100vw;
+  height: 100vh;
+  max-height:none;
+  border-radius:0;
+  border-color: transparent;
+  box-shadow:none;
 }
 
 .clock-glass{
@@ -111,7 +128,7 @@ body::after{
 
 .clock-vignette{
   position:absolute; inset:0;
-  background: radial-gradient(circle at 50% 45%, transparent 40%, rgba(0,0,0,.55) 100%);
+  background: radial-gradient(circle at 50% 45%, transparent 40%, rgba(0,0,0,var(--clock-vignette)) 100%);
   pointer-events:none;
 }
 
@@ -123,6 +140,7 @@ body::after{
   padding:24px;
 }
 
+/* time output: monochrome, big */
 .clock-time{
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: clamp(4.2rem, 16vw, 9rem);
@@ -130,8 +148,15 @@ body::after{
   font-variant-numeric:tabular-nums;
   color:#f7fbff;
   text-shadow:
-    0 0 18px rgba(255,255,255,.16),
-    0 0 60px rgba(255,255,255,.08);
+    0 0 calc(18px * var(--clock-glow)) rgba(255,255,255,.16),
+    0 0 calc(60px * var(--clock-glow)) rgba(255,255,255,.08);
+}
+
+/* seconds smaller */
+.clock-time .sec{
+  font-size: .45em;
+  opacity:.92;
+  letter-spacing:.12em;
 }
 
 .clock-hint{
@@ -145,7 +170,7 @@ body::after{
 }
 .clock-hint b{color:rgba(230,240,255,.55); font-weight:600}
 
-.clock-shell:active{transform:translateY(1px)}
+.clock-shell:active{transform:translateY(1px) scale(var(--clock-scale))}
 
 /* ===== SETTINGS SCREEN ===== */
 .screen-settings{
@@ -172,7 +197,6 @@ body::after{
 .ring{position:absolute;inset:6.5%;transform:rotate(-90deg)}
 .ring-bg{fill:none;stroke:rgba(255,255,255,.08);stroke-width:8}
 .ring-fg{fill:none;stroke:rgba(190,225,255,.88);stroke-width:8;stroke-linecap:round;filter:drop-shadow(0 0 10px rgba(170,220,255,.22));transition:stroke-dashoffset .22s linear}
-
 .tick{position:absolute;inset:10%;border-radius:50%;
   background:repeating-conic-gradient(from 0deg,rgba(255,255,255,.18) 0deg 1deg,transparent 1deg 8deg);
   mask:radial-gradient(circle,transparent 74%,#000 75%);
@@ -189,14 +213,58 @@ body::after{
 .next{font-size:.78rem;color:#c7d6ea;min-height:18px;opacity:.92}
 
 .bottom{display:grid;gap:10px}
-.controls,.presets,.meta{display:flex;justify-content:center;gap:8px;flex-wrap:wrap;user-select:none}
-button{font:inherit;border:1px solid var(--line2);background:rgba(255,255,255,.05);color:var(--text);padding:10px 14px;border-radius:14px;cursor:pointer;backdrop-filter:blur(10px)}
+.controls,.presets,.meta,.prefs{display:flex;justify-content:center;gap:8px;flex-wrap:wrap;user-select:none}
+
+button{
+  font:inherit;
+  border:1px solid var(--line2);
+  background:rgba(255,255,255,.05);
+  color:var(--text);
+  padding:10px 14px;
+  border-radius:14px;
+  cursor:pointer;
+  backdrop-filter:blur(10px)
+}
 button:active{transform:translateY(1px)}
 .btn-main{background:linear-gradient(135deg,rgba(190,225,255,.22),rgba(255,255,255,.05));border-color:rgba(190,225,255,.35)}
 .presets button{font-size:.86rem;padding:8px 11px;color:#d8e5f7}
 .presets button.active{background:rgba(190,225,255,.16);border-color:rgba(190,225,255,.38)}
 .meta{color:var(--muted);font-size:.78rem}
 .chip{border:1px solid var(--line2);padding:6px 10px;border-radius:999px;background:rgba(255,255,255,.035);backdrop-filter:blur(10px)}
+
+/* Preferences panel */
+.prefs{
+  margin-top:6px;
+  padding:10px 10px;
+  border:1px solid rgba(255,255,255,.08);
+  background:rgba(255,255,255,.03);
+  border-radius:16px;
+  backdrop-filter: blur(10px);
+}
+.pref{
+  display:flex;
+  align-items:center;
+  gap:8px;
+  padding:6px 10px;
+  border-radius:14px;
+  border:1px solid rgba(255,255,255,.06);
+  background:rgba(0,0,0,.08);
+}
+.pref label{
+  font-size:.82rem;
+  color:rgba(210,225,245,.85);
+  letter-spacing:.02em;
+}
+.pref input[type="range"]{
+  width:140px;
+}
+.pref input[type="checkbox"]{
+  transform:scale(1.1);
+}
+.small{
+  font-size:.75rem;
+  color:rgba(190,205,230,.70);
+}
 
 /* Overlay modal */
 .overlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;padding:16px;background:rgba(2,6,14,.72);backdrop-filter:blur(10px)}
@@ -217,6 +285,7 @@ button:active{transform:translateY(1px)}
   .core{inset:22%}
   .timeMirror{font-size:clamp(2.4rem,14vw,4.6rem)}
   .clock-shell{height:min(50vw,280px); border-radius:38px}
+  .pref input[type="range"]{width:110px}
 }
 </style>
 </head>
@@ -230,6 +299,7 @@ button:active{transform:translateY(1px)}
       <div class="clock-glass"></div>
       <div class="clock-water"></div>
       <div class="clock-vignette"></div>
+
       <div class="clock-content">
         <div id="time" class="clock-time">60:00</div>
         <div class="clock-hint">press <b>Space</b> for settings</div>
@@ -280,6 +350,37 @@ button:active{transform:translateY(1px)}
         <button data-min="90">90м</button>
       </div>
 
+      <!-- Preferences -->
+      <div class="prefs" aria-label="Clock preferences">
+        <div class="pref">
+          <input id="showSeconds" type="checkbox" />
+          <label for="showSeconds">Показывать секунды</label>
+        </div>
+
+        <div class="pref">
+          <label for="dialFullscreen">Циферблат на весь экран</label>
+          <input id="dialFullscreen" type="checkbox" />
+        </div>
+
+        <div class="pref">
+          <label for="scaleRange">Размер</label>
+          <input id="scaleRange" type="range" min="0.80" max="1.25" step="0.01" />
+          <span id="scaleVal" class="small"></span>
+        </div>
+
+        <div class="pref">
+          <label for="brightRange">Яркость</label>
+          <input id="brightRange" type="range" min="0.50" max="1.40" step="0.01" />
+          <span id="brightVal" class="small"></span>
+        </div>
+
+        <div class="pref">
+          <label for="glowRange">Свечение</label>
+          <input id="glowRange" type="range" min="0.00" max="1.60" step="0.01" />
+          <span id="glowVal" class="small"></span>
+        </div>
+      </div>
+
       <div class="meta">
         <span class="chip">Сегодня: <b id="stToday">0</b></span>
         <span class="chip">Стрик: <b id="stStreak">0</b></span>
@@ -305,7 +406,8 @@ button:active{transform:translateY(1px)}
 <div id="toast" class="toast"></div>
 
 <script>
-const KEY="fitpush_glass_2screens_v1";
+const KEY_STATS="fitpush_stats_v1";
+const KEY_PREFS="fitpush_clock_prefs_v1";
 const IS_IOS=/iPad|iPhone|iPod/.test(navigator.userAgent);
 const IS_STANDALONE=window.matchMedia("(display-mode: standalone)").matches||window.navigator.standalone===true;
 
@@ -321,7 +423,14 @@ const EX=[
 const S={
   min:60,total:3600,left:3600,
   run:false,end:null,id:null,cur:null,
-  stats:{today:0,push:0,streak:0,last:""}
+  stats:{today:0,push:0,streak:0,last:""},
+  prefs:{
+    showSeconds:false,
+    fullscreen:false,
+    scale:1.00,
+    bright:1.00,
+    glow:1.00
+  }
 };
 
 const E={
@@ -330,46 +439,69 @@ const E={
   screenSettings: document.getElementById("screenSettings"),
   openSettings: document.getElementById("openSettings"),
   backClock: document.getElementById("backClock"),
+
+  // Clock output
+  time: document.getElementById("time"),
   timeMirror: document.getElementById("timeMirror"),
 
   // Main UI
-  status:g("status"),
-  phase:g("phase"),
-  time:g("time"),
-  next:g("next"),
-  ring:g("ringFg"),
-  start:g("start"),
-  pause:g("pause"),
-  reset:g("reset"),
-  now:g("now"),
-  notif:g("notif"),
-  presets:g("presets"),
-  stToday:g("stToday"),
-  stPush:g("stPush"),
-  stStreak:g("stStreak"),
-  overlay:g("overlay"),
-  mTitle:g("mTitle"),
-  mDose:g("mDose"),
-  mHint:g("mHint"),
-  done:g("done"),
-  snooze:g("snooze"),
-  skip:g("skip"),
-  toast:g("toast")
+  status: document.getElementById("status"),
+  phase: document.getElementById("phase"),
+  next: document.getElementById("next"),
+  ring: document.getElementById("ringFg"),
+  start: document.getElementById("start"),
+  pause: document.getElementById("pause"),
+  reset: document.getElementById("reset"),
+  now: document.getElementById("now"),
+  notif: document.getElementById("notif"),
+  presets: document.getElementById("presets"),
+  stToday: document.getElementById("stToday"),
+  stPush: document.getElementById("stPush"),
+  stStreak: document.getElementById("stStreak"),
+
+  // prefs
+  showSeconds: document.getElementById("showSeconds"),
+  dialFullscreen: document.getElementById("dialFullscreen"),
+  scaleRange: document.getElementById("scaleRange"),
+  brightRange: document.getElementById("brightRange"),
+  glowRange: document.getElementById("glowRange"),
+  scaleVal: document.getElementById("scaleVal"),
+  brightVal: document.getElementById("brightVal"),
+  glowVal: document.getElementById("glowVal"),
+
+  // overlay
+  overlay: document.getElementById("overlay"),
+  mTitle: document.getElementById("mTitle"),
+  mDose: document.getElementById("mDose"),
+  mHint: document.getElementById("mHint"),
+  done: document.getElementById("done"),
+  snooze: document.getElementById("snooze"),
+  skip: document.getElementById("skip"),
+  toast: document.getElementById("toast")
 };
-function g(id){return document.getElementById(id)}
 
 const CIRC=2*Math.PI*88;
 E.ring.setAttribute("stroke-dasharray",String(CIRC));
 
-function fmt(s){
+/* ===== Helpers ===== */
+function fmtMMSS(s){
   const m=Math.floor(s/60),x=s%60;
-  return String(m).padStart(2,"0")+":"+String(x).padStart(2,"0")
+  return String(m).padStart(2,"0")+":"+String(x).padStart(2,"0");
+}
+function fmtMMSS_withSeconds(s){
+  // same as MM:SS, but we wrap seconds to style smaller
+  const m=Math.floor(s/60),x=s%60;
+  const mm=String(m).padStart(2,"0");
+  const ss=String(x).padStart(2,"0");
+  return `${mm}:<span class="sec">${ss}</span>`;
 }
 function day(d=new Date()){return d.toISOString().slice(0,10)}
-function save(){localStorage.setItem(KEY,JSON.stringify(S.stats))}
-function load(){
+
+/* ===== Storage ===== */
+function saveStats(){ localStorage.setItem(KEY_STATS, JSON.stringify(S.stats)); }
+function loadStats(){
   try{
-    const x=localStorage.getItem(KEY);
+    const x=localStorage.getItem(KEY_STATS);
     if(x) S.stats={...S.stats,...JSON.parse(x)};
   }catch(_){}
   const t=day();
@@ -379,9 +511,21 @@ function load(){
     S.stats.today=0; S.stats.push=0;
   }
   S.stats.last=t;
-  save();
+  saveStats();
 }
 
+function savePrefs(){ localStorage.setItem(KEY_PREFS, JSON.stringify(S.prefs)); }
+function loadPrefs(){
+  try{
+    const x=localStorage.getItem(KEY_PREFS);
+    if(x){
+      const p=JSON.parse(x);
+      S.prefs={...S.prefs,...p};
+    }
+  }catch(_){}
+}
+
+/* ===== UI: screens ===== */
 function showClock(){
   E.screenClock.classList.add("active");
   E.screenSettings.classList.remove("active");
@@ -391,39 +535,74 @@ function showSettings(){
   E.screenClock.classList.remove("active");
 }
 
-function render(){
-  const t=fmt(S.left);
-  E.time.textContent=t;
-  if(E.timeMirror) E.timeMirror.textContent=t;
+/* ===== Apply prefs to UI ===== */
+function applyPrefs(){
+  // seconds
+  E.showSeconds.checked = !!S.prefs.showSeconds;
 
+  // fullscreen dial
+  E.dialFullscreen.checked = !!S.prefs.fullscreen;
+  document.body.classList.toggle("fullscreen-dial", !!S.prefs.fullscreen);
+
+  // scale/brightness/glow -> CSS variables
+  document.documentElement.style.setProperty("--clock-scale", String(S.prefs.scale));
+  document.documentElement.style.setProperty("--clock-bright", String(S.prefs.bright));
+  document.documentElement.style.setProperty("--clock-glow", String(S.prefs.glow));
+
+  // sliders
+  E.scaleRange.value = String(S.prefs.scale);
+  E.brightRange.value = String(S.prefs.bright);
+  E.glowRange.value = String(S.prefs.glow);
+
+  E.scaleVal.textContent = Number(S.prefs.scale).toFixed(2);
+  E.brightVal.textContent = Number(S.prefs.bright).toFixed(2);
+  E.glowVal.textContent = Number(S.prefs.glow).toFixed(2);
+
+  savePrefs();
+  render(); // refresh time formatting
+}
+
+/* ===== Render ===== */
+function render(){
+  // time output based on preference
+  if(S.prefs.showSeconds){
+    E.time.innerHTML = fmtMMSS_withSeconds(S.left);
+  }else{
+    E.time.textContent = fmtMMSS(S.left);
+  }
+
+  // mirror time in settings (plain text is fine)
+  E.timeMirror.textContent = fmtMMSS(S.left);
+
+  // ring progress
   const r=Math.max(0,Math.min(1,1-S.left/S.total));
   E.ring.style.strokeDashoffset=String(CIRC*(1-r));
 
-  if(S.run){E.status.textContent="В работе";}
-  else if(S.left!==S.total){E.status.textContent="Пауза";}
-  else {E.status.textContent="Ожидание";}
+  // status
+  if(S.run) E.status.textContent="В работе";
+  else if(S.left!==S.total) E.status.textContent="Пауза";
+  else E.status.textContent="Ожидание";
 
-  // keep monochrome vibe in clock, but still indicate urgency by subtle tint in settings
-  if(S.left<=60){
-    E.timeMirror.style.color="var(--danger)";
-  }else if(S.left<=300){
-    E.timeMirror.style.color="var(--warn)";
-  }else{
-    E.timeMirror.style.color="var(--text)";
-  }
+  // urgency coloring only in settings
+  if(S.left<=60) E.timeMirror.style.color="var(--danger)";
+  else if(S.left<=300) E.timeMirror.style.color="var(--warn)";
+  else E.timeMirror.style.color="var(--text)";
 
+  // stats
   E.stToday.textContent=String(S.stats.today||0);
   E.stPush.textContent=String(S.stats.push||0);
   E.stStreak.textContent=String(S.stats.streak||0);
 
-  document.title=(S.run?t+" - ":"")+"FitPush";
+  document.title=(S.run?fmtMMSS(S.left)+" - ":"")+"FitPush";
 }
 
+/* ===== Timer logic ===== */
 function pick(min){
   S.min=min;
   S.total=min*60;
   S.left=S.total;
   S.end=null;
+
   if(S.id){clearInterval(S.id);S.id=null}
   S.run=false;
 
@@ -450,7 +629,7 @@ function start(){
       S.run=false;
       fire("timer");
     }
-  },250);
+  }, 250);
 
   render();
 }
@@ -468,12 +647,14 @@ function reset(){
   render();
 }
 
-function toast(t){
-  E.toast.textContent=t;
+/* ===== Toast ===== */
+function toast(msg){
+  E.toast.textContent=msg;
   E.toast.classList.add("show");
-  setTimeout(()=>E.toast.classList.remove("show"),2600);
+  setTimeout(()=>E.toast.classList.remove("show"), 2200);
 }
 
+/* ===== Reminder modal ===== */
 function fire(src){
   S.cur=EX[Math.floor(Math.random()*EX.length)];
   E.mTitle.textContent=S.cur.n;
@@ -484,13 +665,12 @@ function fire(src){
   E.overlay.classList.add("show");
   sound(); vib(); notify(S.cur.n+" - "+S.cur.d);
 }
-
 function done(){
   if(!S.cur) return;
   S.stats.today+=1;
   if(S.cur.p) S.stats.push+=(S.cur.p||0);
   S.stats.last=day();
-  save();
+  saveStats();
   S.cur=null;
   E.overlay.classList.remove("show");
   reset(); start();
@@ -510,6 +690,7 @@ function snooze(){
   start();
 }
 
+/* ===== Notifications ===== */
 function sound(){
   try{
     const c=new(window.AudioContext||window.webkitAudioContext)(),t=c.currentTime;
@@ -547,13 +728,14 @@ function notify(body){
   }
 }
 
+/* ===== PWA ===== */
 function pwa(){
   if(!("serviceWorker" in navigator)) return;
   const ok=location.protocol==="https:" || location.hostname==="localhost" || location.hostname==="127.0.0.1";
   if(ok) navigator.serviceWorker.register("./sw.js").catch(()=>{});
 }
 
-/* UI wiring */
+/* ===== Wire UI events ===== */
 E.presets.addEventListener("click", e=>{
   const b=e.target.closest("button[data-min]");
   if(!b) return;
@@ -572,15 +754,50 @@ E.snooze.addEventListener("click", snooze);
 E.openSettings.addEventListener("click", showSettings);
 E.backClock.addEventListener("click", showClock);
 
+/* Preferences events */
+E.showSeconds.addEventListener("change", ()=>{
+  S.prefs.showSeconds = E.showSeconds.checked;
+  savePrefs(); render();
+});
+E.dialFullscreen.addEventListener("change", ()=>{
+  S.prefs.fullscreen = E.dialFullscreen.checked;
+  applyPrefs();
+});
+E.scaleRange.addEventListener("input", ()=>{
+  S.prefs.scale = Number(E.scaleRange.value);
+  E.scaleVal.textContent = Number(S.prefs.scale).toFixed(2);
+  document.documentElement.style.setProperty("--clock-scale", String(S.prefs.scale));
+  savePrefs();
+});
+E.scaleRange.addEventListener("change", render);
+
+E.brightRange.addEventListener("input", ()=>{
+  S.prefs.bright = Number(E.brightRange.value);
+  E.brightVal.textContent = Number(S.prefs.bright).toFixed(2);
+  document.documentElement.style.setProperty("--clock-bright", String(S.prefs.bright));
+  savePrefs();
+});
+E.brightRange.addEventListener("change", render);
+
+E.glowRange.addEventListener("input", ()=>{
+  S.prefs.glow = Number(E.glowRange.value);
+  E.glowVal.textContent = Number(S.prefs.glow).toFixed(2);
+  document.documentElement.style.setProperty("--clock-glow", String(S.prefs.glow));
+  savePrefs();
+});
+E.glowRange.addEventListener("change", render);
+
 /* Keyboard shortcuts:
    Space = toggle screens
    S = start/pause
    R = reset
    N = manual reminder
+   F = toggle full-screen dial
    Esc = close overlay
 */
 document.addEventListener("keydown", e=>{
   const k=e.key.toLowerCase();
+
   if(e.code==="Space"){
     e.preventDefault();
     if(E.screenClock.classList.contains("active")) showSettings();
@@ -589,6 +806,11 @@ document.addEventListener("keydown", e=>{
   if(k==="s"){ S.run ? pause() : start(); }
   if(k==="r"){ reset(); }
   if(k==="n"){ fire("manual"); }
+  if(k==="f"){
+    S.prefs.fullscreen = !S.prefs.fullscreen;
+    applyPrefs();
+    toast(S.prefs.fullscreen ? "Full screen dial" : "Normal dial");
+  }
   if(k==="escape"){ E.overlay.classList.remove("show"); }
 });
 
@@ -603,7 +825,10 @@ document.addEventListener("visibilitychange", ()=>{
   }
 });
 
-load();
+/* ===== Init ===== */
+loadStats();
+loadPrefs();
+applyPrefs();
 pick(60);
 updNotif();
 render();
